@@ -1,8 +1,11 @@
+shmuel 2025-01-23 00:39:05+02:00 - build 864
+
+1. LuaFAR: a temporary workaround in processing timer events.
+
 shmuel 2025-01-22 20:36:47+02:00 - build 863
 
 1. LuaFAR plugins: the timer queue is closed in DllMain/DLL_PROCESS_DETACH.
    Was: in ExitFARW.
-
 
 shmuel 2025-01-21 21:18:49+02:00 - build 862
 
